# wlpp

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  suppressions.txt
.github/workflows/: conan.yml
example/: gen.sh
include/: arg.hpp  event.hpp  example.hpp  generator.hpp  generator_header.hpp  generator_mode.hpp  interface.hpp  protocol.hpp  request.hpp  util.hpp
include/wlpp/: arg.hpp  event.hpp  generator_code.hpp  generator_mode.hpp  interface.hpp  protocol.hpp  request.hpp
profiles/: ubuntu-22  windows-22
src/: arg.cpp  event.cpp  example.cpp  generator_code.cpp  generator_header.cpp  interface.cpp  main.cpp  protocol.cpp  request.cpp  util.cpp
